exercises/03-chainsaw-tests/keptn-application-context/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: keptn-application-context
spec:
  steps:
  - try:
    - script:
        content: |
          helm template -n $NAMESPACE ../../../charts/demo-app --set prometheus.enabled=false --set service.nodePort=32123 | kubectl apply -n $NAMESPACE -f -
    - assert:
        resource:
          apiVersion: lifecycle.keptn.sh/v1
          kind: KeptnAppContext
          metadata:
            name: demo-app
          spec:
            preDeploymentTasks: ~
            postDeploymentTasks: ~
            postDeploymentEvaluations: ~
            promotionTasks: ~
            metadata: {}
